--- a/markup/index.html
+++ b/markup/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./stil.css">
+    
 </head>
 <body>
-    <h1>Селекторы CSS</h1>
+    <h1>Селектори CSS</h1>
     <ul>
         <li class="active">Уневерсальні</li>
         <li class="active">Тегові селекти</li>
@@ -15,57 +17,57 @@
         <li class="active">Селектор індифікатора</li>
         <li class="active">Селектор потомка</li>
         <li class="active">Дочірний селектор</li>
-        <li id="special">Сосідній селектор</li>
-        <li id="special">Родинний селектор</li>
-        <li id="special">Селектор атребута</li>
-        <li id="special">Селектор псевдокласа</li>
-        <li id="special">Селектор псевдоелементів</li>
+        <li class="special">Сосідній селектор</li>
+        <li class="special">Родинний селектор</li>
+        <li class="special">Селектор атребута</li>
+        <li class="special">Селектор псевдокласа</li>
+        <li class="special">Селектор псевдоелементів</li>
     </ul>
-    <h2>Уневерсальні</h2>
-    <p>
-     <b>Універсальний селектор в CSS -</b> це селектор, який вибирає всі елементи на сторінці. Він записується як зірочка (*). Наприклад, якщо ви хочете задати стиль для всіх елементів на сторінці, ви можете використовувати універсальний селектор таким чином:* {
+       <div id="content">
+        <h2>Уневерсальні</h2>
+            <p>
+                <b>Універсальний селектор в CSS -</b> це селектор, який вибирає всі елементи на сторінці. Він записується як зірочка (*). Наприклад, якщо ви хочете задати стиль для всіх елементів на сторінці, ви можете використовувати універсальний селектор таким чином:* {
   margin: 0;  padding: 0;}Це забезпечить те, що всі елементи на сторінці не матимуть жодних відступів або полів.
-    </p>
-   <h2>Тегові селекти</h2>
-        <p>
-            <b>Тегові селекти CSS -</b> це спосіб вибору елементів на веб-сторінці для подальшої стилізації. В CSS-селекторах використовуються різні типи селекторів, які дозволяють максимально точно вибирати елементи для стилізації.
-        </p>
-    <h2>Класові селекти</h2>
-   <p>
-    <b>Класові селекти CSS -</b> це механізм вибору елементів на сторінці, який дозволяє вибирати елементи за їх класом. Класовий селектор починається з крапки “.” і застосовується до елемента з відповідним класом.Класові селекти CSS дозволяють вибирати елементи на сторінці за їх класом. Це дуже корисний механізм для розробників веб-сторінок, оскільки він дозволяє змінювати стиль багатьох елементів одночасно. Наприклад, якщо ви хочете змінити колір тексту для всіх елементів з класом “example”, то вам не потрібно змінювати кожен елемент окремо
-   </p>
-   <h2>Селектор індифікатора</h2>
-   <b>Селектор індифікатора CSS -</b> використовується для вибору елемента з унікальним ідентифікатором. Селектор ідентифікатора починається з символу решітки “#” і застосовується до елемента з відповідним ідентифікатором. Наприклад, якщо ви хочете вибрати елемент з ідентифікатором “example”, то використовуйте “#example” 
-   <h2>Селектор нащадка</h2>
-    <p>
-    <b>Селектор нащадка в CSS-</b> е комбінатор, який складається з двох або більше селекторів, розділених пробілом. Він використовується для вибору елементів, які є нащадками іншого елемента. Селектори нащадків схожі на селектори дочірніх елементів, але вони не враховують вкладеність елементів та застосовують свої властивості до всіх елементів даного типу, що знаходяться всередині батьківського елемента, незалежно від глибини вкладеності. Наприклад, якщо ви хочете вибрати всі елементи span, які знаходяться всередині елемента div, ви можете використати селектор нащадка div span.
-    </p>
-    <h2>Дочірний селектор</h2>
-    <p>
-        <b>Дочірний селектор в CSS-</b>це комбінатор, який складається з двох або більше селекторів, розділених символом >. Він використовується для вибору елементів, які є прямими нащадками іншого елемента1.Дочірній селектор використовується для більш точного вибору елементів на сторінці. Він дозволяє вибрати елементи, які є прямими нащадками іншого елемента, тобто знаходяться безпосередньо всередині нього. 
+            </p>
+        <h2>Тегові селекти</h2>
+            <p>
+                <b>Тегові селекти CSS -</b> це спосіб вибору елементів на веб-сторінці для подальшої стилізації. В CSS-селекторах використовуються різні типи селекторів, які дозволяють максимально точно вибирати елементи для стилізації.
+            </p>
+        <h2>Класові селекти</h2>
+            <p>
+                <b>Класові селекти CSS -</b> це механізм вибору елементів на сторінці, який дозволяє вибирати елементи за їх класом. Класовий селектор починається з крапки “.” і застосовується до елемента з відповідним класом.Класові селекти CSS дозволяють вибирати елементи на сторінці за їх класом. Це дуже корисний механізм для розробників веб-сторінок, оскільки він дозволяє змінювати стиль багатьох елементів одночасно. Наприклад, якщо ви хочете змінити колір тексту для всіх елементів з класом “example”, то вам не потрібно змінювати кожен елемент окремо
+            </p>
+        <h3>Селектор індифікатора</h3>
+                <b>Селектор індифікатора CSS -</b> використовується для вибору елемента з унікальним ідентифікатором. Селектор ідентифікатора починається з символу решітки “#” і застосовується до елемента з відповідним ідентифікатором. Наприклад, якщо ви хочете вибрати елемент з ідентифікатором “example”, то використовуйте “#example” 
+        <h2>Селектор нащадка</h2>
+            <p>
+                <b>Селектор нащадка в CSS-</b> е комбінатор, який складається з двох або більше селекторів, розділених пробілом. Він використовується для вибору елементів, які є нащадками іншого елемента. Селектори нащадків схожі на селектори дочірніх елементів, але вони не враховують вкладеність елементів та застосовують свої властивості до всіх елементів даного типу, що знаходяться всередині батьківського елемента, незалежно від глибини вкладеності. Наприклад, якщо ви хочете вибрати всі елементи span, які знаходяться всередині елемента div, ви можете використати селектор нащадка div span.
+            </p>
+        <h2>Дочірний селектор</h2>
+            <p>
+                <b>Дочірний селектор в CSS-</b>це комбінатор, який складається з двох або більше селекторів, розділених символом >. Він використовується для вибору елементів, які є прямими нащадками іншого елемента1.Дочірній селектор використовується для більш точного вибору елементів на сторінці. Він дозволяє вибрати елементи, які є прямими нащадками іншого елемента, тобто знаходяться безпосередньо всередині нього. 
         Це може бути корисним, коли ви хочете застосувати стилі тільки до певних елементів, що знаходяться всередині іншого елемента, але не до всіх його нащадків. Наприклад, якщо ви хочете змінити колір тексту тільки для абзаців, які знаходяться безпосередньо всередині елемента article, але не для абзаців, які знаходяться всередині інших елементів всередині article, ви можете використати дочірній селектор article > p.
-    </p>
-    <h2>Сосідній селектор</h2> 
-    <p>
-        <b>Сосідній селектор в CSS-</b>використовується для вибору елемента, який безпосередньо слідує за іншим елементом і знаходиться на одному з ним рівні ієрархії. Щоб використати сосідній селектор, потрібно написати два селектори, розділених символом +. Перший селектор вказує на елемент, за яким слідує другий елемент, а другий селектор вказує на елемент, який потрібно вибрати. Наприклад, якщо ви хочете змінити колір тексту для елемента p, який безпосередньо слідує за елементом ul, ви можете написати такий CSS-код:ul + p {color: red;}Цей код змінить колір тексту тільки для того елемента p, який безпосередньо слідує за елементом ul. Якщо між ними буде інший елемент, наприклад div, то колір тексту не зміниться.
-    </p>
-    <h2>Родинний селектор</h2>
-    <p>
-        <b>Родинний селектор в CSS-</b>В CSS не існує селектора, який би дозволяв вибрати батьківський елемент або сусідній елемент батька або нащадків сусіднього елемента батька1. Є комбінатори, які дозволяють вибирати елементи, що знаходяться всередині іншого елемента, але немає способу вибрати батьківський елемент. Якщо вам потрібно застосувати стилі до батьківського елемента, ви можете зробити це, вказавши його безпосередньо у своєму CSS-коді.
-    </p>
-    <h2>Селектор атребута</h2>
-    <p>
-        <b>Селектор атребута в CSS-</b>це селектор, який дозволяє вибрати елементи на основі наявності, значення або частини значення їх атрибутів. Селектор атрибута складається з імені елемента (або зірочки * для вибору будь-якого елемента), квадратних дужок [ ] та імені атрибута всередині них. Наприклад, селектор a[href] вибере всі елементи a, які мають атрибут href. Можна також використовувати різні оператори, такі як =, ~=, |=, ^=, $= та *= для вибору елементів на основі точного значення атрибута, наявності певного слова в значенні атрибута, початку або кінця значення атрибута тощо.
-    </p>
-    <h2>Селектор псевдокласа</h2>
-    <p>
-        <b>Селектор псевдокласа</b>це селектор, який дозволяє вибрати елементи на основі їх стану або позиції в документі. Селектор псевдокласа складається з імені елемента (або зірочки * для вибору будь-якого елемента) та двокрапки : з ім’ям псевдокласа після нього. Наприклад, селектор a:hover вибере всі елементи a, на які наведено курсор миші. Існує багато різних псевдокласів, таких як :hover, :active, :visited, :first-child, :last-child, :nth-child() тощо, які дозволяють вибирати елементи на основі різних критеріїв.
-    </p>
-    <h2><a href="https://developer.mozilla.org/ru/docs/Web/CSS/Pseudo-elements">Селектор псевдоелементів</a></h2>
-    <p>
-        <b>Селектор псевдоелементів</b>дозволяє створювати та вибирати віртуальні елементи, які не існують у вихідному HTML-коді. Щоб використати селектор псевдоелемента, потрібно написати ім’я елемента (або зірочку * для вибору будь-якого елемента) та двокрапки :: з ім’ям псевдоелемента після нього. Наприклад, селектор p::first-line вибере перший рядок тексту всередині елемента p. Можна також використовувати псевдоелементи ::before та ::after для додавання контенту перед або після елемента. Наприклад, наступний CSS-код додасть зображення перед кожним елементом h1: h1::before {content: url(logo.png);}
-    </p>
-
-   
+            </p>
+        <h2>Сосідній селектор</h2> 
+            <p>
+                <b>Сосідній селектор в CSS-</b>використовується для вибору елемента, який безпосередньо слідує за іншим елементом і знаходиться на одному з ним рівні ієрархії. Щоб використати сосідній селектор, потрібно написати два селектори, розділених символом +. Перший селектор вказує на елемент, за яким слідує другий елемент, а другий селектор вказує на елемент, який потрібно вибрати. Наприклад, якщо ви хочете змінити колір тексту для елемента p, який безпосередньо слідує за елементом ul, ви можете написати такий CSS-код:ul + p {color: red;}Цей код змінить колір тексту тільки для того елемента p, який безпосередньо слідує за елементом ul. Якщо між ними буде інший елемент, наприклад div, то колір тексту не зміниться.
+            </p>
+        <h2>Родинний селектор</h2>
+            <p>
+                <b>Родинний селектор в CSS-</b>В CSS не існує селектора, який би дозволяв вибрати батьківський елемент або сусідній елемент батька або нащадків сусіднього елемента батька1. Є комбінатори, які дозволяють вибирати елементи, що знаходяться всередині іншого елемента, але немає способу вибрати батьківський елемент. Якщо вам потрібно застосувати стилі до батьківського елемента, ви можете зробити це, вказавши його безпосередньо у своєму CSS-коді.
+            </p>
+        <h2>Селектор атребута</h2>
+            <p>
+                <b>Селектор атребута в CSS-</b>це селектор, який дозволяє вибрати елементи на основі наявності, значення або частини значення їх атрибутів. Селектор атрибута складається з імені елемента (або зірочки * для вибору будь-якого елемента), квадратних дужок [ ] та імені атрибута всередині них. Наприклад, селектор a[href] вибере всі елементи a, які мають атрибут href. Можна також використовувати різні оператори, такі як =, ~=, |=, ^=, $= та *= для вибору елементів на основі точного значення атрибута, наявності певного слова в значенні атрибута, початку або кінця значення атрибута тощо.
+            </p>
+        <h2>Селектор псевдокласа</h2>
+            <p>
+                <b>Селектор псевдокласа</b>це селектор, який дозволяє вибрати елементи на основі їх стану або позиції в документі. Селектор псевдокласа складається з імені елемента (або зірочки * для вибору будь-якого елемента) та двокрапки : з ім’ям псевдокласа після нього. Наприклад, селектор a:hover вибере всі елементи a, на які наведено курсор миші. Існує багато різних псевдокласів, таких як :hover, :active, :visited, :first-child, :last-child, :nth-child() тощо, які дозволяють вибирати елементи на основі різних критеріїв.
+            </p>
+        <h2><a href="https://developer.mozilla.org/ru/docs/Web/CSS/Pseudo-elements">Селектор псевдоелементів</a></h2>
+            <p>
+                <b>Селектор псевдоелементів</b>дозволяє створювати та вибирати віртуальні елементи, які не існують у вихідному HTML-коді. Щоб використати селектор псевдоелемента, потрібно написати ім’я елемента (або зірочку * для вибору будь-якого елемента) та двокрапки :: з ім’ям псевдоелемента після нього. Наприклад, селектор p::first-line вибере перший рядок тексту всередині елемента p. Можна також використовувати псевдоелементи ::before та ::after для додавання контенту перед або після елемента. Наприклад, наступний CSS-код додасть зображення перед кожним елементом h1: h1::before {content: url(logo.png);}
+            </p>
+        </div>
 </body>
 </html>
